# advanced-machine-learning-methods

./: .gitignore  README.md  TC5033_Activity3b_Team30.ipynb
mini-torch/: README.md  pyproject.toml
mini-torch/mini_torch/: backward.py  tensor.py
mini-torch/mini_torch/autograd/: functions.py
mini-torch/tests/: test_tensor.py
models/: utils.py
notebooks/: A1b_DL_TC5033.ipynb  A1b_DL_TC5033Terminado.ipynb  A1b_DL_TC5033_data_exploration.ipynb  A2b_DL_TC5033.ipynb  A2c_DL_TC5033.ipynb  A2c_DL_TC5033_JPR_2.ipynb  A3a_DL_TC5033_embeddings.ipynb  A3b_DL_TC5033_text_classifier.ipynb  A4.1_DL_TC5033_Transformer.ipynb  A4_DL_TC5033_Transformer.ipynb  transformer.py
